# Copyright 2020 Endless OS Foundation, LLC
# SPDX-License-Identifier: LGPL-2.1-or-later

option(
  'installed_tests',
  type: 'boolean',
  value: false,
  description: 'enable installed tests'
)
option(
  'metrics',
  type: 'feature',
  value: 'enabled',
  description: 'enable metrics support'
)
option(
  'server_port',
  type: 'integer',
  value: 43381,
  description: 'port number for the update server',
)
option(
  'tests',
  type: 'boolean',
  value: true,
  description: 'Whether to build and run unit tests'
)
